--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,10 @@ yt-dlp>=2023.7.6
 requests>=2.31.0,<3.0.0
 urllib3>=1.26.16,<3.0.0
 
+# Desktop app (system tray support)
+pystray
+Pillow
+
 # Development and testing (optional)
 pytest>=7.4.0,<8.0.0
 pytest-flask>=1.2.0,<2.0.0
