--- a/src/chrome/manifest.json
+++ b/src/chrome/manifest.json
@@ -1,50 +1,51 @@
 {
-    "manifest_version": 3,
-    "name": "Noticing Game",
-    "version": "0.2.2",
-    "description": "Enhance language learning by detecting frequent words in YouTube subtitles, enabling interactive vocabulary practice.",
-    "permissions": ["activeTab", "storage", "tabs"],
-    "host_permissions": ["*://*.youtube.com/*", "https://www.googleapis.com/*"],
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "icons/icon16.png",
-            "48": "icons/icon48.png",
-            "128": "icons/icon128.png"
-        }
-    },
-    "content_scripts": [
-        {
-            "matches": ["*://*.youtube.com/watch?*"],
-            "js": [
-                "content-bridge.js",
-                "text-processing.js",
-                "youtube-video-utils.js",
-                "word-detection.js",
-                "subtitle-extraction.js",
-                "subtitle-analysis.js",
-                "subtitle-processor.js",
-                "ui-components.js",
-                "panel-manager.js",
-                "word-list-manager.js",
-                "word-difficulty-tracker.js",
-                "word-sorting-modes.js",
-                "game-logic.js",
-                "youtube-integration.js",
-                "ui-manager.js",
-                "content.js"
-            ],
-            "css": ["floating-panel.css"],
-            "run_at": "document_end"
-        }
-    ],
-    "web_accessible_resources": [
-        {
-            "resources": ["word-list.json", "content-bridge.js", "icons/*"],
-            "matches": ["*://*.youtube.com/*"]
-        }
-    ],
-    "background": {
-        "service_worker": "background.js"
+  "manifest_version": 3,
+  "name": "Noticing Game",
+  "version": "0.3.2",
+  "description": "Enhance language learning by detecting frequent words in YouTube subtitles, enabling interactive vocabulary practice.",
+  "permissions": ["activeTab", "storage", "tabs"],
+  "host_permissions": ["*://*.youtube.com/*", "https://www.googleapis.com/*"],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*.youtube.com/watch?*"],
+      "js": [
+        "content-bridge.js",
+        "utils/text-processing.js",
+        "utils/youtube-video-utils.js",
+        "word-detection.js",
+        "subtitle-extraction.js",
+        "subtitle-analysis.js",
+        "subtitle-processor.js",
+        "ui-components.js",
+        "panel-manager.js",
+        "word-list-manager.js",
+        "word-difficulty-tracker.js",
+        "word-sorting-modes.js",
+        "game-logic.js",
+        "youtube-integration.js",
+        "utils/server-version-check.js",
+        "ui-manager.js",
+        "content.js"
+      ],
+      "css": ["floating-panel.css"],
+      "run_at": "document_end"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["word-list.json", "content-bridge.js", "icons/*"],
+      "matches": ["*://*.youtube.com/*"]
+    }
+  ],
+  "background": {
+    "service_worker": "background.js"
+  }
 }
